tests/negative/option/option_invalid_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Test accessing member of Optional without narrowing.

type User = { name: string };

function main() {
    let u: Optional<User> = None;
    print(u.name); // Error: Cannot access 'name' on Optional<User> (might be None)
}
